--- a/App.Application/App.Application.csproj
+++ b/App.Application/App.Application.csproj
@@ -14,7 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Core\Core.csproj" />
+      <ProjectReference Include="..\App.Core\App.Core.csproj" />
     </ItemGroup>
 
 </Project>
